# RAG-research

./: .gitignore  README.md  config_mistral.py  embedd_toml_questions.py  mistral_ocr_processor.py  normalize_text.py  parse_mistral_embedd_into_db.py  query_db_all_questions.py  save_plots.py
Basline Code/: config.py  environment.yml  main.py  main_mistral.py  parse_embedd_into_db.py  requirements.yaml  save_plots.py
Basline Code/conda environment/: RootPiRAG.yml
Basline Code/pdf_data/: addFilesHere.txt
Modular Pipeline Code/: Produktnamn.csv  README.md  config.py  embedd_toml_questions.py  parse_embedd_insert.py  pre_parse_pdf_save_md_files.py  query_db_all_questions.py  save_stats_and_plots.ipynb
Modular Pipeline Code/helping_scripts/: README.md  batch_OCR_Mistral.py  batch_upload_Mistral.py  chunking.py  chunking_kemi.py  compare_parsing.py  generate_llm_response.py  get_llm_ans_to_text.py  get_results_table.py  norm_funcs.py  reranking.py
Modular Pipeline Code/md_data/: 12_BERÄTTELSER_OM_SKAM_page1.md  12_BERÄTTELSER_OM_SKAM_page10.md  12_BERÄTTELSER_OM_SKAM_page11.md  12_BERÄTTELSER_OM_SKAM_page12.md  12_BERÄTTELSER_OM_SKAM_page13.md  12_BERÄTTELSER_OM_SKAM_page14.md  12_BERÄTTELSER_OM_SKAM_page15.md  12_BERÄTTELSER_OM_SKAM_page16.md  12_BERÄTTELSER_OM_SKAM_page17.md  12_BERÄTTELSER_OM_SKAM_page18.md  12_BERÄTTELSER_OM_SKAM_page19.md  12_BERÄTTELSER_OM_SKAM_page2.md  12_BERÄTTELSER_OM_SKAM_page20.md  12_BERÄTTELSER_OM_SKAM_page21.md  12_BERÄTTELSER_OM_SKAM_page22.md  12_BERÄTTELSER_OM_SKAM_page23.md  12_BERÄTTELSER_OM_SKAM_page24.md  12_BERÄTTELSER_OM_SKAM_page25.md  12_BERÄTTELSER_OM_SKAM_page26.md  12_BERÄTTELSER_OM_SKAM_page3.md  12_BERÄTTELSER_OM_SKAM_page4.md  12_BERÄTTELSER_OM_SKAM_page5.md  12_BERÄTTELSER_OM_SKAM_page6.md  12_BERÄTTELSER_OM_SKAM_page7.md  12_BERÄTTELSER_OM_SKAM_page8.md  12_BERÄTTELSER_OM_SKAM_page9.md
Modular Pipeline Code/results/: results_saved_here.txt
docs/: Anaconda.md  Documentation_Step1_DataCreation.md  Learning Resources.md  Learning_Resources.md  Meeting_Notes.md  Normalization_Versions.md  Possible_next_steps.md  Projektbeskrivning_v2.md  RAG Flowchart.md  README.md  possible_tasks.md  vscode.md
source/: README.md  splitPDF-sentenceTransformers-normPDF.py
source/BASELINE_SEMANTIC_CHUNK/: README.md  main_langchain_semantic.py  requirements.txt
source/MistralOCR-Test/: config_mistral.py  embedd_toml_questions.py  (+6 more)
source/Mistral_OCR_Test/: README.md  config_mistral.py  main.py  mistral_ocr_processor.py  parse_mistral_embedd_into_db.py  pyproject.toml  save_plots.py
source/SentenceTransformers.v2/: README.md  config.py  main.py  parse_embedd_into_db.py  pyproject.toml  save_plots.py
source/gemini-embedding-001/: README.md  main_gemini.py  pyproject.toml
source/sentence-bert-swedish_AND_nltk/: README.md  config.py  embedd_toml_questions.py  pyproject.toml  query_db_all_questions.py
source/sentence-bert-swedish_AND_nltk/questions/cleaned/: PMCSKOLVERKET_Questions.toml
(+372 files in other folders)
