[project]
name = "gemini-embedding-001"
version = "0.1.0"
description = "This code is based on the BASELINE Code and was created to Evaluate Gemini Embedding model on Swedish documents."
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "chromadb>=1.0.16",
    "google-generativeai>=0.8.5",
    "joblib>=1.5.1",
    "levenshtein>=0.27.1",
    "matplotlib>=3.10.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pymupdf>=1.26.3",
    "seaborn>=0.13.2",
    "tomli>=2.2.1",
    "tomlkit>=0.13.3",
    "tqdm>=4.67.1",
]
